@@ -1,3 +1,8 @@
+2006-03-23 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* HttpResponseTest.cs: added tests for CacheControl that set it to null
+	and string.Empty.
+
 2006-03-10  Chris Toshok  <toshok@ximian.com>
 
 	* StaticSiteMapProviderTest.cs: new tests.
